--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@tribody/binance",
+  "name": "@tribody2014/binance",
   "version": "1.0.4",
   "description": "",
   "type": "module",
